[gd_scene load_steps=6 format=2]

[ext_resource path="res://MiniGame/Labyrinthe/Bouton_laby.tscn" type="PackedScene" id=1]
[ext_resource path="res://MiniGame/Labyrinthe/Labyrinthe.gd" type="Script" id=2]
[ext_resource path="res://MiniGame/Labyrinthe/Scene_Labyrinthe.gd" type="Script" id=3]
[ext_resource path="res://Fonts/RobotoMono-VariableFont_wght.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Bouton_laby" parent="." instance=ExtResource( 1 )]
position = Vector2( 176.777, 890.955 )
reset = true

[node name="Labyrinthe" type="Node2D" parent="."]
position = Vector2( 1036.88, 268.685 )
script = ExtResource( 2 )
originalTab = [ [ "I", "I", "I", "r", "r", "r", "I", "r", "r", "default", "r", "default", "I", "r", "I", "r", "r", "I", "r", "I", "I", "r", "I", "default", "r" ], [ 1, 1, 0, 2, 0, 0, 1, 1, 1, 0, 1, 0, 0, 3, 1, 3, 2, 0, 0, 1, 0, 1, 0, 0, 3 ] ]
inputs = [ Vector2( 2, 0 ), Vector2( 4, 0 ), Vector2( 0, 4 ) ]
outputs = [ Vector2( 4, 6 ), Vector2( 2, 6 ), Vector2( 6, 2 ) ]

[node name="Label" type="Label" parent="."]
margin_left = 48.7353
margin_top = 55.0921
margin_right = 656.735
margin_bottom = 431.092
custom_fonts/font = SubResource( 1 )
text = "Link each input to their respective output.
Push buttons to slide tiles.
Press the lone button to reshuffle the puzzle."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="triggered" from="Bouton_laby" to="Labyrinthe" method="_on_Bouton_laby_triggered"]
[connection signal="end_minigame" from="Labyrinthe" to="." method="_on_Labyrinthe_end_minigame"]
